@@ -87,6 +87,7 @@
      * Fix SD Card module race conditions
      * Make it possible to hide certain loggers from interesting log
      * Filter telemetry, send only what's "significantly" changed
+     * Fixed maximum temperature check for nozzle and heatbed
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
